LIFO, FIFO, weighted now working correctly